--- a/css/doughnut.css
+++ b/css/doughnut.css
@@ -1,18 +1,52 @@
-@font-face { font-family: "Pixel Font"; src: url('../fonts/XPDR_02.ttf?1437354571') format('truetype'); }
-* { font-family: "Microsoft YaHei", Arial; color: #666; -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: subpixel-antialiased; font-smoothing: subpixel-antialiased; text-decoration: none; margin: 0; border: 0; padding: 0; -moz-user-select: -moz-none; -ms-user-select: none; -webkit-user-select: none; user-select: none; }
+@font-face { font-family: "Pixel Font"; src: url('../fonts/XPDR_02.ttf?1008550186') format('truetype'); }
+* { font-family: "Microsoft YaHei", Arial; -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: subpixel-antialiased; font-smoothing: subpixel-antialiased; text-decoration: none; margin: 0; border: 0; padding: 0; -moz-user-select: -moz-none; -ms-user-select: none; -webkit-user-select: none; user-select: none; }
+
+html, body { height: 100%; }
 
 input, select, textarea { -moz-user-select: auto; -ms-user-select: auto; -webkit-user-select: auto; user-select: auto; }
 
-.chart { position: absolute; width: 50%; height: 30%; top: 0; left: 50%; margin-left: -25%; }
+.doughnut_header { background: #0d8fdb; height: 48%; padding-top: 45%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; min-height: 250px; }
+.doughnut_header * { color: #fff; }
+.doughnut_title { position: absolute; top: 10px; left: 6%; font-size: .65em; }
+.doughnut_title em { display: block; font-style: normal; font-size: 1.4em; }
+.doughnut_title_right { position: absolute; top: 10px; right: 6%; font-size: .65em; }
+.doughnut_description { position: absolute; top: 23%; right: 6%; font-size: .75em; }
+.doughnut_description span { font-size: 1.4em; }
 
-.doughnutSummary { position: absolute; top: 50%; left: 50%; color: #000; text-align: center; /* text-shadow: 0 -1px 0 #111; */ }
+.doughnut_Chart { position: absolute; width: 42%; height: 28%; top: 0; left: 50%; margin-left: -21%; }
 
-.doughnutSummaryNumber { position: absolute; top: 25%; width: 100%; font-size: 1.75em; font-weight: bold; }
+.doughnutSummary { position: absolute; top: 50%; left: 50%; margin-left: -25%; color: #000; text-align: center; text-shadow: 1px 1px 2px #111; }
 
-.bar-wrap { width: 200px; display: inline-block; border: 1px solid #0D7E68; border-radius: 9px; padding: 0; height: 18px; }
+.doughnutSummaryNumber { position: absolute; top: 25%; width: 100%; font-size: 2em; font-weight: lighter; color: #fff; }
+.doughnutSummaryNumber:after { content: "%"; font-size: .5em; }
 
-.bar { height: 18px; width: 0%; position: relative; border-radius: 8px; display: inline-block; }
+.bar-wrap { width: 100px; display: inline-block; border-radius: 9px; padding: 0; height: 14px; background: #fff; vertical-align: top; }
+
+.bar { height: 14px; width: 0%; position: relative; border-radius: 8px; display: block; }
+.bar-parameter { color: #ffd35c; }
+.bar-main { height: 14px; margin: 25px 6% 0; text-align: center; }
+.bar-main:first-child { margin-top: 0; }
+.bar-main > span { font-size: .75em; height: 14px; display: inline-block; line-height: 14px; vertical-align: top; }
+.bar-main > span:after { content: "%"; }
+.bar-main label { font-size: .75em; float: left; height: 14px; display: inline-block; line-height: 14px; }
+.bar-main em { font-style: normal; font-size: .55em; float: right; height: 14px; display: inline-block; line-height: 14px; }
 
 .bar.active { -moz-transition: width 2s; -o-transition: width 2s; -webkit-transition: width 2s; transition: width 2s; }
 
-.bar.mint { background-color: yellow; }
+.bar.mint { background-color: #ffd35c; }
+
+.loan_main_btn { background: #0d8fdb; border: 2px solid #0d8fdb; padding: 0; color: #fff; height: 36px; line-height: 32px; display: block; width: 84%; border-radius: 5px; margin: 0 auto 12px; }
+.loan_main form { color: #666; letter-spacing: normal; text-align: left; width: 88%; margin: 10px auto; }
+.loan_main form div { line-height: 1.8em; }
+.loan_main form .loan_main_btn { width: 100%; }
+.loan_main form mark { background: transparent; font-size: .65em; color: #fe8f86; margin: 8px 0; width: 100%; }
+.loan_main_singleInput { border: 2px solid #0d8fdb; border-radius: 8px; width: 100%; }
+.loan_main_singleInput div { margin: 0 !important; }
+.loan_main_singleInput label { display: inline-block; float: left; font-size: .9em; margin: .4em 0 .2em .8em; }
+.loan_main_singleInput input { width: 60%; display: inline-block !important; border: none !important; box-shadow: none !important; }
+.loan_main_predict { margin: 0; padding: 8px 0; text-align: center; border: 2px solid #ddd; border-radius: 8px; }
+.loan_main_predict h3 { color: #0d8fdb; font-size: .95em; }
+.loan_main_predict p { color: #aaa; font-weight: lighter; font-size: .6em; line-height: 1.8em; }
+.loan_main_shield { margin: 0; padding: 8px 0; text-align: center; }
+.loan_main_shield h3 { margin: 0 auto; width: 40%; color: #0d8fdb; font-size: .95em; padding-left: 15px; background: url('../img/shield.jpg?1437404234') no-repeat center left; background-size: auto 80%; }
+.loan_main_shield p { color: #aaa; font-weight: lighter; font-size: .6em; line-height: 1.8em; }
